--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="container">
         <h1>Flashcard Game</h1>
         <nav id="categoryButtons">
-            <button onclick="selectCategory('animals')">Animals</button>
-            <button onclick="selectCategory('fruits')">Fruits</button>
-            <button onclick="selectCategory('vehicles')">Vehicles</button>
+            <button onclick="selectCategory('animals')">Test1</button>
+            <button onclick="selectCategory('fruits')">Test2</button>
+            <button onclick="selectCategory('vehicles')">Test3</button>
         </nav>
         
         <div id="remainingFlashcards" class="word"></div> <!-- Remaining flashcards counter -->
